# ToDo-list-using-FastAPI

todo/: .coverage  pyproject.toml
todo/tests/: test_app.py
