[project]
name = "todo"
version = "0.1.0"
description = ""
authors = [
    {name = "Augusto-logo",email = "augusto2.logo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"
ruff = "^0.11.10"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev todo/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=todo -vv'
post_test = 'coverage html'